src/libostree/ostree-core.h
@@ -132,6 +132,9 @@ char * ostree_checksum_from_bytes_v (GVariant *bytes);
 void ostree_checksum_inplace_from_bytes (const guchar *bytes,
                                          char         *buf);
 
+void ostree_checksum_inplace_to_bytes (const char *checksum,
+                                       guchar     *buf);
+
 const guchar *ostree_checksum_bytes_peek (GVariant *bytes);
 
 int ostree_cmp_checksum_bytes (const guchar *a, const guchar *b);
